testsuite/poke.pkl/trim-diag-4.pk
/* { dg-do compile } */

var a = [1,2][:[1,2]]; /* { dg-error "invalid index.*\n.*expected integral" } */
